# rsrs-exps

./: .dockerignore  .gitignore  .gitmodules  .python-version  =4.0.16  Cargo.toml  Dockerfile  README.md  _rsrs_config_results.py  build.rs  compose.yaml  demo.ipynb  demo.md  kernel_interface.c  kernel_interface.h  python_kernels.py  rsrs_config.py  run_test.sh  run_test_bempp_kifmm_sphere_5k.sh  run_test_for_plot.sh  run_test_lf.sh  test_and_plot.py  test_bempp.py  test_dependencies.py  test_rsrs.ipynb  testgen.py
.github/workflows/: biegrid-40k-regression.yml  biegrid-regression.yml
c_src/: structured_operator_interface.c  structured_operator_interface.h
extra_meshes/: f16_body.geo  satellite_1.msh  satellite_2.msh  satellite_3.msh  shapes.py
latex/: bie_benchmark_four_tables.tex  bie_benchmark_summary.tex  perturbed_biegrid_regression_note.tex
python/: bie_grid.py  class_names.py  geometry.py  righ_hand_sides.py  right_hand_sides.py  structured_operators.py
results/: current_grid.msh
results/sphere_helmholtz_1000/: app_id.json  diag_errs.json  num_samples.json  skel_errs.json
results/sphere_helmholtz_1000/absolute_errors_1e-2/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/absolute_errors_1e-4/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/absolute_errors_1e-6/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/absolute_errors_1e-8/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/relative_errors_1e-2/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/relative_errors_1e-4/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/relative_errors_1e-6/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/relative_errors_1e-8/: 0.json  1.json  2.json  3.json
results/sphere_helmholtz_1000/times_1e-2/: lu.json  mixed.json  nullification.json  sampling.json  update_id.json  update_lu.json
results/sphere_helmholtz_1000/times_1e-4/: lu.json  mixed.json  nullification.json  sampling.json  update_id.json  update_lu.json
results/sphere_helmholtz_1000/times_1e-6/: lu.json  mixed.json  nullification.json  sampling.json  update_id.json  update_lu.json
results/sphere_helmholtz_1000/times_1e-8/: lu.json  mixed.json  nullification.json  sampling.json
results/sphere_helmholtz_1000_3.14/: errors_1e-2.json  errors_1e-4.json  errors_1e-6.json  errors_1e-8.json  stats_1e-2.json  stats_1e-4.json  stats_1e-6.json  stats_1e-8.json
results/sphere_helmholtz_2000_3.14/: errors_1e-2.json  errors_1e-4.json  errors_1e-6.json  errors_1e-8.json  stats_1e-2.json  stats_1e-4.json  stats_1e-6.json  stats_1e-8.json
results/sphere_helmholtz_5000_3.14/: errors_1e-2.json  errors_1e-4.json  errors_1e-6.json  errors_1e-8.json  stats_1e-2.json  stats_1e-4.json  stats_1e-6.json  stats_1e-8.json
results/sphere_helmholtz_500_3.14/: stats_1e-2.json  stats_1e-4.json  stats_1e-6.json  stats_1e-8.json
scripts/: check_biegrid_40k_regression.py  check_biegrid_regression.py  generate_bempp_kifmm_sphere_5k.py  run_perturbed_biegrid_suite.py  setup_deps.sh  setup_local.sh
src/: io.rs  lib.rs  main.rs  profiling.rs  profiling_options.rs  test_prep.rs  test_prep_ops.rs
src/io/: errors.rs  geometries.rs  low_rank_matrices.rs  outputs.rs  plot_results.rs  python_kernel.rs  read_and_write.rs  solve.rs  structured_operator.rs  structured_operators_types.rs
src/profiling_options/: add_samples_test.rs  nullification.rs  solving_least_squares.rs
tests/: biegrid_perturbed_operator.rs  biegrid_perturbed_rsrs.rs  helmholtz_dense_norm.rs
