[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-rsrs"
version = "0.0.1-dev"
edition = "2021"
authors = [
    "Ignacia Fierro-Piccardo <ignaciapiccardo@gmail.com>",
]
description = "RSRS tests"
build = "build.rs"

[lib]
name = "rsrs_exps"
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "0.13.*"
rand = { version = "0.8.5", features = ["alloc"] }
rand_chacha = "0.3.*"
num = "0.4.*"
rlst = {git = "https://github.com/linalg-rs/rlst.git", branch = "extend_abstract_operator"}
bempp-octree = { git = "https://github.com/bempp/octree.git" }
mpi = { version = "0.8.*", features = ["derive", "user-operations"] }
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
rand_distr = "0.4"
npy = "0.4.0"
plotters = "0.3.7"
paste = "1"
bempp-rsrs = { git = "https://github.com/bempp/rsrs.git", branch = "accept_operators" }
bempp = { git = "https://github.com/bempp/bempp-rs.git", rev = "4e59d4202bef86023cf436a0904d78f6fa4b985b", features = ["enable_tracing"]}
ndelement = { git="https://github.com/bempp/ndelement.git", rev = "c7363aec58d84a91833c00e4ffd25c24c60f2f97", features = ["mpi"]}
green-kernels = { git = "https://github.com/bempp/green-kernels.git", rev = "e01a482f070e09e114f12b2ea1a1b2c1064881bb", features = ["mpi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
piechart = "1.0.0"
rayon = "1.8"
libc = "0.2"
strum = "0.24"
strum_macros = "0.24"
regex = "1"
bempp-quadrature = "0.1.0"


[profile.release]
debug = 1

[dev-dependencies]
rand_distr = "0.4.3"
#criterion = { version = "0.5.*", features = ["html_reports"]}
paste = "1"

[build-dependencies]
cbindgen = "0.27.0"
cc = "1.0"

[lints.clippy]
wildcard_imports = "forbid"

